--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- Логотип -->
+  <img src="logo.png" alt="Biron Apps Logo" style="width:100px; height:100px; border-radius:20px; margin-bottom:20px;">
+
   <title>Biron Apps — Mobile App and Game Developer</title>
   <style>
     body { 
